--- a/html/NewStudy.html
+++ b/html/NewStudy.html
@@ -1,44 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="scripts/jquery-3.1.1.min.js"></script>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-    <form name="newstudy" id="newstudy" action="http://localhost:8080/QualOptServer/services/user/newstudy" method="post" accept-charset="utf-8">
-        <div>
-            <h1 class="titleText">
-                Create new Study
-            </h1>
-        </div>
-
+    <head>
+        <meta charset="UTF-8">
+        <title>New Study</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+              integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    </head>
+    <body>
         <div class="container">
-            <label><b>Name</b></label>
-            <input type="text" placeholder="Enter Name of Study" name="name" required>
-
-            <label><b>Study Description</b><br></label>
-            <textarea class="textBox" rows="5" placeholder="Enter Description" name="description" required></textarea>
-
-            <label><b>Study Incentive</b><br></label>
-            <textarea class="textBox" rows="5" placeholder="Enter Incentive for participants" name="incentive" required></textarea>
-
-            <label>Has Monetary Incentive</label>
-            <input type="checkbox" value="Pay" name="hasPay"><br>
-
-            <button type="submit" name="submit" value="Submit">Create Study</button>
-
+            <h1 class="text-center">New Study</h1>
+            <form>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Name">
+                </div>
+                <div class="form-group">
+                    <label for="description">Description</label>
+                    <textarea class="form-control" id="description" rows="5"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="incentive">Incentive</label>
+                    <textarea class="form-control" id="incentive" rows="3"></textarea>
+                </div>
+                <div class="form-check">
+                    <label class="form-check-label">
+                        <input type="checkbox" class="form-check-input">
+                        Monetary
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-primary btn-lg btn-block">Save</button>
+                <button type="button" class="btn btn-secondary btn-lg btn-block">Draft Email</button>
+            </form>
         </div>
-    </form>
-    <script src="scripts/newStudy.js"></script>
-</body>
+    </body>
 </html>
